--- a/registration.html
+++ b/registration.html
@@ -53,7 +53,7 @@
                       <input type="password" id="pwd" name="password" placeholder="ievadīt parole"/>
                 </p>
                 <p class="button">
-                    <button type="button" class="hero_button3">Pieslēgties</button>
+                    <button type="submit" class="hero_button3">Pieslēgties</button>
                 </p>
             </ul>
           </form>
